added feat: confirm order + change shipping status